# note

./: .gitignore  Cargo.toml  README.md  app.go  config.go  date.go  date_test.go  go.mod  go.sum  main.go  note.go
src/: cli.rs  day_range.rs  days.rs  main.rs
src/md/: mod.rs
