[package]
name = "note"
version = "0.1.0"
authors = ["awilliams <645192+awilliams@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
chrono = "0.4"
home = "*"
pulldown-cmark = { version = "0.8", default-features = false }
ansi_term = "*"
